--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,6 @@
 
 @article{Song2023RIS,
   title={The Optimization of RIS Beam Direction for Minimizing Shaded Areas in Indoor Environment},
-  author={Song Min Kyoung, Lee Kyeong Min, Sang-Woon Jeon},
+  author={Song, Min Kyoung and Lee, Kyeong Min and Jeon, Sang-Woon},
   year={2023},
 }
